re PR c++/8727 (compiler confused by inheritance from an anonymous struct)

PR c++/8727
	* g++.dg/inherit/typeinfo1.C: New test.

	PR c++/8663
	* g++.dg/inherit/typedef1.C: New test.

	PR c++/8727
	* cp-tree.h (lang_type_class): Add typeinfo_var.
	(CLASSTYPE_TYPEINFO_VAR): New macro.
	* rtti.c (get_tinfo_decl): Use it.

	PR c++/8663
	* init.c (expand_member_init): Always get the main variant of a
	base class.

From-SVN: r59694